syntax = "proto3";
package factor.company_member;
import "helpers.proto";
import "google/protobuf/timestamp.proto";

message CompanyMember {
	string user_id = 1;
	repeated string roles = 2;
	google.protobuf.Timestamp created = 3;
	google.protobuf.Timestamp updated = 4;
	uint64 history_len = 5;
	exonum.Hash history_hash = 6;
}

